Fixed issue when navbar was collapsed, the toggle button wouldn't hold the options open

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,11 +5,6 @@
 }
 
 
-.navbar-nav.navbar-center {
-    position: absolute;
-    left: 50%;
-    transform: translatex(-50%);
-}
 
 
 
